footer navigation gap corrections

--- a/src/sass/about-section.scss
+++ b/src/sass/about-section.scss
@@ -198,7 +198,7 @@
   }
 
   .about-section {
-    padding-bottom: 195px;
+    padding-bottom: 196px;
   }
 
   .about-section__head {
