--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -200,6 +200,7 @@
 
   .footer__inner {
     flex-flow: column wrap;
+    width: 82.7%;
   }
 
   .footer__about {
@@ -214,7 +215,7 @@
   }
 
   .footer__logo {
-    margin-bottom: 78px;
+    margin-bottom: 73.2px;
     width: 220px;
   }
 
@@ -227,7 +228,8 @@
   .footer__p {
     font-weight: 300;
     font-size: 46pt;
-    line-height: 85px;
+    line-height: 86px;
+    width: 96.6%;
   }
 
   .footer__navigation {
@@ -235,16 +237,29 @@
     flex-basis: initial;
     width: 100%;
     padding-left: 0;
+    display: flex;
+    justify-content: space-between;
+
+    .footer__column_low {
+      width: initial;
+      flex-basis: initial;
+      max-width: initial;
+    }
   }
 
   .footer__column_low {
-    margin-top: 153px;
+    margin-top: 151px;
+    padding-right: 6px;
   }
 
   .footer__subtitle {
     font-size: 43pt;
     margin-bottom: 76px;
     letter-spacing: 0.4px;
+  }
+
+  .footer__menu {
+    padding-left: 5px;
   }
 
   .footer__socials.footer__column_low {
@@ -265,6 +280,7 @@
   .footer__link {
     margin-bottom: 4.8px;
     font-size: 33pt;
+    letter-spacing: 2.6px;
   }
 
   .socials-list__icon {
